// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeadingStyled /> should render the component with different props 1`] = `
<h3
  as="h4"
  className="HeadingStyled-eAwnvT jVlCPy"
>
  Almighty Corinthians!
</h3>
`;

exports[`<HeadingStyled /> should render the component with the default props 1`] = `
<h3
  as="h3"
  className="HeadingStyled-eAwnvT ibXRHv"
>
  Almighty Corinthians!
</h3>
`;

exports[`<HeadingStyled /> should still rendering the component even if the element doesnt match the list 1`] = `
<h3
  as="span"
  className="HeadingStyled-eAwnvT iXHZJF"
>
  Almighty Corinthians!
</h3>
`;
